# ciciel

./: .gitignore  CMakeLists.txt  Jenkinsfile  output_log_non_working.txt  output_log_working.txt
.devcontainer/: devcontainer.json
.github/workflows/: run_ctests_on_push.yml
cmake/: FindCursesSupport.cmake  InstallUtf8Cpp.cmake  InstallUtf8Proc.cmake  installGTest.cmake
doc/: Data_Structures.mdj  Diagrams.mdj
docker/: Dockerfile  Dockerfile.jenkins  docker-compose.yml  jenkins-plugin.txt
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  argparse.hpp  ui.hpp
src/cli/argparse/: argument_parser.cpp  argument_parser.hpp  cli_argument_base.cpp  cli_argument_base.hpp  cli_argument_template.hpp  cli_arguments.cpp  cli_arguments.hpp
src/cli/ui/: ui_app.cpp  ui_app.hpp
src/cli/ui/elements/: ui_element.cpp  ui_element.hpp
src/cli/ui/elements/containers/: container.cpp  container.hpp  flow_container.cpp  flow_container.hpp  hbox_container.cpp  hbox_container.hpp  vbox_container.cpp  vbox_container.hpp
src/cli/ui/elements/widgets/: widget.cpp  widget.hpp
src/cli/ui/elements/widgets/base/: panel_base.cpp  panel_base.hpp  string_content_widget.cpp  string_content_widget.hpp  vector_content_widget.hpp  widget.cpp  widget.hpp
src/cli/ui/elements/widgets/base/content_widgets/: input_content_widget.cpp  input_content_widget.hpp  string_content_widget.cpp  string_content_widget.hpp  vector_content_widget.hpp
src/cli/ui/elements/widgets/controls/: button.cpp  button.hpp  input_box.cpp  input_box.hpp  label.cpp  label.hpp  list.cpp  list.hpp
src/cli/ui/elements/widgets/panels/: hbox_panel.cpp  hbox_panel.hpp  panel.hpp  panel_base.cpp  panel_base.hpp  vbox_panel.cpp  vbox_panel.hpp
src/cli/ui/events/: event.cpp  event.hpp  keys.hpp
src/cli/ui/screen/: screen.cpp  screen.hpp  screen_buffer.cpp  screen_buffer.hpp  term_cap.hpp  terminal.cpp  terminal.hpp  u32string.cpp  u32string.hpp
src/cli/ui/style/: colors.cpp  colors.hpp  style.cpp  style.hpp
src/cli/ui/utils/: ascii.hpp  string.cpp  string.hpp
src/concurrent/: CMakeLists.txt  thread.hpp
src/data_structures/: CMakeLists.txt  byte_buffer.cpp  byte_buffer.hpp  data_structures.hpp
src/data_structures/base/: container_interface.hpp  custom_traits.hpp  enum.hpp  grid_container.hpp  indexable_interface.hpp  iterable.hpp  iterable2d.hpp  iterators.hpp  vec_container.hpp
src/data_structures/buffers/: byte_buffer.cpp  byte_buffer.hpp  concurrent_ring_buffer.hpp  ring_buffer.hpp
src/data_structures/grids/: array2d.hpp  dynamic_array2d.hpp  vec2.hpp  vec3.hpp  vec_n.hpp
src/data_structures/list/: linked_list.hpp
src/data_structures/queue/: circular_queue.hpp  concurrent_circular_queue.hpp  concurrent_queue.hpp  queue.hpp  queue_interface.hpp
src/io/: CMakeLists.txt
src/io/base/: io_handle.cpp  stream_io.cpp  stream_io.hpp
src/io/file/: buffered_io.cpp  buffered_io.hpp  file_io.hpp  mmap_file_io.cpp  mmap_file_io.hpp
src/logging/: CMakeLists.txt  enum.hpp  formatting.cpp  formatting.hpp  logger_base.hpp
src/metrics/: CMakeLists.txt  metrics_broker.cpp  metrics_broker.hpp  metrics_gather.cpp  metrics_gather.hpp  metrics_logger.cpp  metrics_logger.hpp  metrics_singl.cpp  metrics_singl.hpp  metrics_stack.cpp  metrics_stack.hpp  metrics_utils.cpp  metrics_utils.hpp
src/patterns/: CMakeLists.txt  patterns.hpp
src/patterns/pub_sub/: broker.cpp  broker.hpp  event.hpp  pub_sub_broker.cpp  pub_sub_broker.hpp  publisher.cpp  publisher.hpp  subscriber.cpp  subscriber.hpp
src/patterns/signals_slot/: signals_slot.hpp
src/sys/: CMakeLists.txt
src/sys/concurrent/: thread.cpp  thread.hpp
src/sys/io/: file.cpp  file.hpp
src/sys/io/base/: io_handle.hpp  stream_io.cpp  stream_io.hpp
src/sys/io/file/: file_io.cpp  file_io.hpp  mmap_file_io.cpp  mmap_file_io.hpp
src/sys/time/: times_utils.cpp
src/time/: CMakeLists.txt  times_utils.hpp
test/: CMakeLists.txt  argparser.cpp  argparser_gtest.cpp  array2d_test.cpp  color_test.cpp  dyn_array2d_test.cpp  io_file_test.cpp  metrics_test.cpp  mmap_io_file_test.cpp  ring_buffer_test.cpp  screen_buffer_test.cpp  screen_test.cpp  signal_test.cpp  simple_file.txt  simple_file1.txt  thread_gtest.cpp  thread_test.cpp  ui_test.cpp  user_input.cpp  vec2_test.cpp
test/unittest/: array2d_gtest.cpp  byte_buffer_gtest.cpp  circular_queue_gtest.cpp  conc_circ_queue_gtest.cpp  conc_queue_gtest.cpp  concurrent_ring_buffer_gtest.cpp  dyn_array2d_gtest.cpp  pubsub_gtest.cpp  ring_buffer_gtest.cpp  signal_and_slot_gtest.cpp  thread_gtest.cpp  vecn_gtest.cpp
